--- a/materi2.html
+++ b/materi2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css" integrity="sha384-Mujw/rYMLaAmNKgBlyiHh/Vc+p4UU7I/lfQl/X4pICrFJguheK7vZjZmZyTix1HM" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg nav-light bg-navy" style="margin-bottom:30px">
+  <nav class="navbar navbar-expand-lg nav-light bg-navy" style="margin-bottom:30px">
     <div class="container">
       <a rel="home" href="#">
         <h1><b>HokiKu</b></h1>
@@ -71,7 +71,6 @@
         <a href="home.html" class="nav-link">Kembali</a>
       </div>
   </nav>
-  <br><br><br><br>
   <div class="py-11 bg-navy">
     <div class="container">
       <div class="mx-auto text-center" style="max-width: 468px;">
