--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg nav-light bg-navy">
+  <nav class="navbar navbar-expand-lg nav-light bg-navy">
     <div class="container">
       <a rel="home" href="#">
         <h1><b>Hoki Ku</b></h1>
