--- a/materi2.html
+++ b/materi2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css" integrity="sha384-Mujw/rYMLaAmNKgBlyiHh/Vc+p4UU7I/lfQl/X4pICrFJguheK7vZjZmZyTix1HM" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg nav-light bg-navy" style="margin-bottom:30px">
+  <nav class="navbar navbar-expand-lg nav-light bg-navy">
     <div class="container">
       <a rel="home" href="#">
         <h1><b>HokiKu</b></h1>
